20140504 tape.c: ensure that we have an edge at the end of a tape to ensure that
         the last pulse is terminated - fixes loading of Moon Cresta (thanks,
         Lee Tonks) (Fred).
20141230 szx.c: guard against passing a NULL pointer to memcpy in
         write_if1_chunk() (thanks, clang static analyser) (Fred).
20141230 autogen.sh: select glibtoolize where required (Sergio via fuse).
20150107 rzx.c: rewrite some conditions for RZX finalisation in a more logical
         way (thanks, clang static analyser) (Sergio).
20150107 test/test.c: remove "Function call argument is an uninitialized value"
         warning. There's no chance that it is, but clang doesn't realise that
         (Sergio).
20150225 pzx_read.c,szx.c,tzx_read.c,warajevo_read.c: avoid (undefined) reliance
         on pointer overflow in buffer length checks (Stuart).
20150302 internals.h,pzx_read.c,szx.c,test/test.c,zxs.c: add and use ARRAY_SIZE
         macro (Stuart).
20150302 libspectrum.h.in: add libspectrum_{new,new0,renew}() macros (Stuart).
20150302 accessor.pl,creator.c,csw.c,dck.c,ide.c,microdrive.c,pzx_read.c,rzx.c,
         szx.c,tape.c,tape_block.c,tzx_read.c,tzx_write.c: use libspectrum_new()
         and libspectrum_renew() macros where sizeof(elem) > 1 (Stuart).
20150302 libspectrum.in.h: fix ordering of args in libspectrum_new0() (Stuart).
20150302 z80.c: fix overallocation for uncompressed v2 data blocks (Stuart).
20150302 bzip2.c,crypto.c,csw.c,dck.c,ide.c,libspectrum.c,microdrive.c,plusd.c,
         pzx_read.c,rzx.c,sna.c,snapshot.c,sp.c,szx.c,tap.c,test/test.c,
         tzx_read.c,tzx_write.c,warajevo_read.c,wav.c,z80.c,z80em.c,zlib.c,
         zxs.c: use libspectrum_{new,new0,renew}() macros where
         sizeof(elem) == 1 (Stuart).
20150302 memory.c: check for overflow in libspectrum_calloc() (Stuart).
20150302 libspectrum.h.in,memory.c: add libspectrum_{m,re}alloc_n() and use this
         for libspectrum_{new,renew}() macros (Stuart).